# us4-v6-simplicio-windows

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .llm-project-mapper.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GOAL_RESULT.md  INIT.md  INSTALL.md  PROGRESS.md  README.md  README.pt-BR.md  US4-V6-Windows-Edition.md  _BOOTSTRAP.md  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json  playwright.config.ts
.agents/: README.md  _template.agent.md
.claude/: settings.json
.codex/: config.toml  hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.skills/: README.md
.specs/: README.md
docs/: architecture-map.md  domain-map.md  local-setup.md  migration-guide.md  troubleshooting.md
profiles/: CMakeLists.txt
runtime/: version.h.in
runtime/adapters/: CMakeLists.txt
runtime/adapters/include/us4/runtime/adapters/: adapter_contracts.h  adapter_factory.h  bitnet_adapter_contracts.h  bitnet_model_loader.h  bitnet_reference_hooks.h  dense_adapter_base.h  i_us4_windows_adapter.h  llama_config.h  llama_model_loader.h  model_loader.h  moe_model_loader.h  scalar_family_adapters.h  ternary_adapter_contracts.h  ternary_model_loader.h  ternary_reference_hooks.h
runtime/adapters/src/: adapter_factory.cpp  bitnet_model_loader.cpp  bitnet_reference_hooks.cpp  bitnet_scalar_adapter.cpp  deepseek_moe_scalar_adapter.cpp  dense_adapter_base.cpp  gemma_scalar_adapter.cpp  glm_moe_scalar_adapter.cpp  kimi_moe_scalar_adapter.cpp  llama_config.cpp  llama_model_loader.cpp  llama_scalar_adapter.cpp  minimax_moe_scalar_adapter.cpp  model_loader.cpp  moe_model_loader.cpp  null_windows_adapter.cpp  qwen_scalar_adapter.cpp  ternary_model_loader.cpp  ternary_reference_hooks.cpp  ternary_scalar_adapter.cpp
runtime/backends/: CMakeLists.txt
runtime/backends/cpu_avx/: CMakeLists.txt
runtime/backends/cpu_avx/include/us4/runtime/backends/cpu_avx/: amx_dispatcher.h  avx2_matmul.h  avx512_matmul.h  avx_attention.h  bitnet_matmul.h  bitnet_reference.h  blocked_matmul.h  dequant_int4.h  dequant_int8.h  kernel_profile.h  scalar_attention.h  scalar_matmul.h
runtime/backends/cpu_avx/src/: amx_dispatcher.cpp  avx2_matmul.cpp  avx512_matmul.cpp  avx_attention.cpp  bitnet_matmul.cpp  bitnet_reference.cpp  blocked_matmul.cpp  dequant_int4.cpp  dequant_int8.cpp  kernel_profile.cpp  scalar_attention.cpp  scalar_matmul.cpp
runtime/backends/cuda/: CMakeLists.txt
runtime/backends/cuda/include/us4/runtime/backends/cuda/: cublas_fallback.h  cuda_backend.h  cuda_context.h  cuda_graph_cache.h  cuda_kernels.h  cuda_types.h
runtime/backends/cuda/kernels/: bitnet_matmul.cu  matmul.cu  rmsnorm.cu  softmax.cu
runtime/backends/cuda/src/: cublas_fallback.cpp  cuda_backend.cpp  cuda_context.cpp  cuda_graph_cache.cpp  cuda_kernels_host.cpp
runtime/backends/directml/: CMakeLists.txt
runtime/backends/directml/include/us4/runtime/backends/directml/: dml_device.h  dml_graph.h  dml_types.h
runtime/backends/directml/src/: dml_device.cpp  dml_graph.cpp
runtime/backends/include/us4/runtime/backends/: backend_descriptor.h  backend_selector.h  hardware_probe.h  runtime_types.h
runtime/backends/onednn/: CMakeLists.txt
runtime/backends/onednn/include/us4/runtime/backends/onednn/: block_gemm_contract.h  onednn_backend.h
runtime/backends/onednn/src/: block_gemm_contract.cpp  onednn_backend.cpp
runtime/backends/src/: backend_selector.cpp  hardware_probe.cpp
runtime/backends/vulkan/: CMakeLists.txt
runtime/backends/vulkan/include/us4/runtime/backends/vulkan/: vulkan_context.h  vulkan_execution_plan.h  vulkan_kernel_library.h
runtime/backends/vulkan/kernels/: matmul.comp  rmsnorm.comp  softmax.comp
runtime/backends/vulkan/src/: vulkan_context.cpp  vulkan_kernel_library.cpp
runtime/backends/windows_ml/: CMakeLists.txt
runtime/backends/windows_ml/include/us4/runtime/backends/windows_ml/: layer_offloader.h  mixed_dispatch_planner.h  power_thermal_monitor.h  windows_ml_execution_plan.h  winml_adapter.h
runtime/backends/windows_ml/src/: layer_offloader.cpp  mixed_dispatch_planner.cpp  power_thermal_monitor.cpp  winml_adapter.cpp
runtime/benchmarks/: CMakeLists.txt
runtime/benchmarks/correctness/: README.md
runtime/benchmarks/include/us4/runtime/benchmarks/: bench_csv_writer.h  benchmark_registry.h  matrix_runner.h
runtime/benchmarks/src/: bench_csv_writer.cpp  benchmark_registry.cpp  correctness_diff.cpp  cpu_attention_bench.cpp  cpu_bitnet_bench.cpp  cpu_block_gemm_bench.cpp  cuda_bitnet_bench.cpp  cuda_fallback_policy_bench.cpp  cuda_graph_reuse_bench.cpp  cuda_kernel_correctness_bench.cpp  dense_baseline.cpp  hybrid_planner_gate.cpp  llama_backend_contract_bench.cpp  matrix_runner.cpp  moe_throughput.cpp
runtime/cache/: CMakeLists.txt
runtime/cache/include/us4/runtime/cache/: multimodal_cache.h  prefix_cache.h  sparsity_aware_cache.h
runtime/cache/src/: multimodal_cache.cpp  prefix_cache.cpp  sparsity_aware_cache.cpp
runtime/core/: CMakeLists.txt  cpu_scalar_runtime.cpp  cpu_scalar_runtime.h  gqa_attention.cpp  gqa_attention.h  hardware_probe.cpp  hardware_probe.h  model_registry.cpp  model_registry.h  rope.cpp  rope.h  runtime_context.cpp  runtime_context.h  runtime_mode.cpp  runtime_mode.h  tensor.h
runtime/speculative/: CMakeLists.txt
runtime/speculative/include/us4/runtime/speculative/: draft_model_loader.h  eagle3_decoder.h  peagle_decoder.h  speculative_engine.h
runtime/speculative/src/: draft_model_loader.cpp  eagle3_decoder.cpp  peagle_decoder.cpp  speculative_engine.cpp
runtime/tuning/: CMakeLists.txt
runtime/tuning/include/us4/runtime/tuning/: auto_tuner.h  profile_store.h
runtime/tuning/src/: auto_tuner.cpp  profile_store.cpp
scripts/: README.md  build-msix.ps1  build-portable-zip.ps1  create-dev-signing-cert.ps1  dev-msix-smoke.ps1  evidence.ps1  evidence.sh  generate-checksums.ps1  install-completions.ps1  install-msix-smoke.ps1  post-publish-smoke.ps1  preflight-release.ps1  release-dry-run.ps1  remove-dev-signing-cert.ps1  render-planning-status.ps1  render-project-status.ps1  render-release-manifest.ps1  (+14 more)
(+168 files in other folders)
